# am4

./: .env.example  .env.template  .gitattributes  .gitignore  .gitmodules  404.html  AM4APICog.py  AirportCog.py  AllianceCog.py  CMakeLists.txt  Cargo.toml  CompCog.py  DatabaseCog.py  Dockerfile  LICENSE  Pipfile  README.md  SettingsCog.py  ShortcutsCog.py  acdbbot.py  acdbbot417.py  acdbbot418.py  allianceLogger.py  am4functions.c  checks.py  compile.sh  config.example.json  config.py  debug.py  format.py  graphgen.py  helper_cy.pyx  index.html  libduckdb.cmake  main.py  main_experimental.py  mkdocs.yml  monitor.py  objects.inv  plan.pptx  (+8 more)
ACDBLegacyVersions/: CompCog.py.save  CompetitionData.json.save  acdbbot260.py  acdbbot261.py  acdbbot262.py  acdbbot263.py  acdbbot270.py  acdbbot300.py  acdbbot310.py  acdbbot320.py  acdbbot330.py  acdbbot331.py  acdbbot332.py  acdbbot333.py  acdbbot340.py  acdbbot340a.py  acdbbot340b.py  acdbbot340c.py  acdbbot350.py  acdbbot351.py  acdbbot351NoFiles.py  acdbbot352.py  acdbbot353.py  acdbbot400.py  acdbbot400ID.py  acdbbot410a.py  acdbbot411.py  acdbbot412.py  acdbbot413.py  acdbbot414.py  acdbbot415.py  acdbbot416.py  submissions.csv
am4/: Cargo.toml  README.md  __init__.py  config.py  log.py
am4-app/: Cargo.toml  README.md
am4-cli/: Cargo.toml
am4-web/: Cargo.toml  README.md  index.html
am4-web/src/: app.module.scss  console.rs  db.rs  lib.rs  main.rs  nav.rs  search.rs
am4-web/src/components/: aircraft.rs  airport.rs  mod.rs  nav.rs
am4/api/: fapi.py  main.py
am4/api/models/: airport.py  demand.py  game.py  ticket.py
am4/bot/: bot.py  checks.py  config.py
am4/data/: aircrafts.csv  airports.csv
am4/db/: __init__.py  base.py  client.py  config.py
am4/src/: aircraft.rs  airport.rs  campaign.rs  lib.rs  ticket.rs  user.rs  utils.rs
am4/src/aircraft/: custom.rs  db.rs  mod.rs  search.rs
am4/src/airport/: db.rs  mod.rs  search.rs
am4/src/config/: cargo.rs  mod.rs  pax.rs
am4/src/demand/: cargo.rs  mod.rs  pax.rs
am4/src/route/: ci.rs  db.rs  distance.rs  leg.rs  mod.rs  search.rs  speed.rs  ticket.rs  time.rs
am4/src/route/config/: cargo.rs  mod.rs  pax.rs
am4/src/route/demand/: cargo.rs  mod.rs  pax.rs
am4/src/route/search/: mod.rs  profit.rs  schedule.rs  stopover.rs
am4/tests/: aircraft.rs  aircraft_tests.rs  airport.rs  airport_tests.rs  db.rs  game.rs  route.rs
am4/utils/: CMakeLists.txt  CMakeLists_arrow.txt  LICENSE  README.md  generate-stubs.py  pyproject.toml
am4/utils/_official_api/: __init__.py
am4/utils/cpp/: aircraft.cpp  binder.cpp  db.cpp  main.cpp  route.cpp  ticket.cpp
am4/utils/cpp/include/: demand.hpp  log.hpp  route.hpp
am4/utils/cpp/include/ext/: jaro.hpp
am4/utils/cpp/include/ext/libduckdb/: CMakeLists.txt
am4/utils/data/: airports.parquet
am4/utils/py/: __init__.py
am4/utils/py/aircraft/: __init__.py
am4/utils/py/api/: __init__.py
am4/utils/py/api/models/: alliance.py
am4/utils/py/db/: __init__.py
am4/utils/py/demand/: __init__.py
am4/utils/py/game/: __init__.py
am4/utils/py/log/: __init__.py
am4/utils/py/route/: __init__.py
am4/utils/stubs/: __init__.pyi
am4/utils/stubs/_core/: __init__.pyi
am4/utils/stubs/_core/log/: __init__.pyi
am4/utils/stubs/utils/: game.pyi  log.pyi  ticket.pyi
am4/utils/tests/: test_aircraft.py  test_airport.py  test_api.py  test_game.py  test_route.py
am4/utils/tests/data/: A_Valiant Air_1691065293.json
am4/web/: README.md
am4bot/: main.py
am4bot-old/: AM4APICog.py  AirportCog.py  AllianceCog.py  CompetitionData.json  allianceLogger.sh
am4utils/: binder.cpp  route.cpp
data/: ac-indexed.csv  ac.csv  aircrafts.csv  aircrafts_table.sql  airports.csv  airports_table.sql  ap-indexed-radians.csv  engines.csv  engines_table.sql
dep/: helper_c.py
docs/: formulae.md  index.md  introduction.md  tos.md
formulae/: index.html
introduction/: index.html
misc/: cargo.md
misc/scripts/prepare_data/: Cargo.toml  README.md
misc/scripts/prepare_data/src/: ac_image.rs  main.rs  utils.rs
misc/scripts/prepare_data/src/img/: .gitignore
repr/: README.md  dockerfile  repr_err  reproduce.py  requirements.txt
research/: .gitignore  README.md  aircrafts.xlsx  analyse.py  analyse2.py  codeshare_analyse.py  fuel_log.json  generate_ac_map.py  hub_search.py  monitor.py  monitor.sh  planes.csv  planes.py  routes_to_feather.py  to_parquet.py
search/: search_index.json
src/am4utils/: CMakeLists.txt  README.md  __init__.py  aircraft.cpp  airport.cpp  binder.cpp  db.cpp  generate-stubs.py  libduckdb.cmake  main.cpp  pyproject.toml  route.cpp
src/am4utils/cpp/: aircraft.cpp  airport.cpp  binder.cpp  db.cpp  demand.cpp  game.cpp  log.cpp  main.cpp  route.cpp  ticket.cpp
src/am4utils/cpp/include/: aircraft.hpp  airport.hpp  binder.hpp  db.hpp  demand.hpp  enums.h  game.hpp  log.hpp  route.hpp  ticket.hpp  user.hpp
src/am4utils/cpp/include/ext/: jaro.hpp
src/am4utils/cpp/include/ext/libduckdb/: CMakeLists.txt
src/am4utils/data/: aircrafts.parquet  airports.parquet
src/am4utils/docs/: CMakeLists.txt  Doxyfile.in
src/am4utils/include/: aircraft.hpp  airport.hpp  db.hpp  enums.h  route.hpp
src/am4utils/py/: __init__.py
src/am4utils/py/airport/: __init__.py
src/am4utils/py/api/models/: user.py
src/am4utils/py/game/api/: __init__.py
src/am4utils/py/game/api/models/: alliance.py  core.py  user.py
src/am4utils/py/ticket/: __init__.py
src/am4utils/py/user/: __init__.py
src/am4utils/stubs/: __init__.pyi
src/am4utils/stubs/_core/: __init__.pyi
src/am4utils/stubs/_core/aircraft/: __init__.pyi
src/am4utils/stubs/_core/airport/: __init__.pyi
src/am4utils/stubs/_core/db/: __init__.pyi
src/am4utils/stubs/_core/demand/: __init__.pyi
src/am4utils/stubs/_core/game/: __init__.pyi
src/am4utils/stubs/_core/log/: __init__.pyi
src/am4utils/stubs/_core/route/: __init__.pyi
src/am4utils/stubs/_core/ticket/: __init__.pyi
src/am4utils/stubs/_core/user/: __init__.pyi
src/am4utils/tests/: conftest.py  test_aircraft.py  test_airport.py  test_all.py  test_api.py  test_game.py  test_main.py
(+284 files in other folders)
