[workspace]
resolver = "2"
members = ["am4", "am4-app", "am4-web", "misc/scripts/prepare_data"]

[profile.release]
debug = true

[profile.wasm-release]
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1

[patch.crates-io]
indexed_db_futures = { git = "https://github.com/Twey/rust-indexed-db", branch = "no-uuid-wasm-bindgen" } # for am4-web
