[project]
name = "am4bot"
version = "0.0.0"
description = "Discord bot for the game Airline Manager 4."
authors = [{ name = "cathaypacific8747", email = "58929011+cathaypacific8747@users.noreply.github.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "am4utils",
    "matplotlib>=3.7.1",
    "Pillow>=9.5.0",
    "urllib3>=2.0.2",
    "discord.py>=2.2.3",
    "adjustText>=0.8",
    "httpx>=0.24.1"
]

[project.optional-dependencies]
dev = [
    "rich", "loguru",
    "pytest", "ruff",
    "beautifulsoup4", "pyjsparser", "pandas", "seaborn", "statsmodels"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals"]
testpaths = ["src/am4utils/tests"]


[tool.ruff]
select = ["E", "F"]
ignore = [
    "PT011",
    "W292",
    "E501", # line too long
]

exclude = ["src-old", "src-v2-v3", "research/nn"]

target-version = "py39"

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]