[package]
name = "am4-web"
version = "0.2.0-alpha.2"
edition = "2021"

[dependencies]
am4 = { path = "../am4" }
thiserror = "1.0.61"
leptos = { version = "0.6.12", features = ["csr"] }
console_error_panic_hook = "0.1.7"
indexed_db_futures = "0.4.1"
serde = "1.0.203"
wasm-bindgen-futures = "0.4.42"

[package.metadata.leptos]
lib-profile-release = "wasm-release"
