[project]
name = "am4utils"
version = "0.1.7"
description = "Tools and utilities for the game Airline Manager 4."
authors = [{ name = "cathaypacific8747", email = "58929011+cathaypacific8747@users.noreply.github.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "httpx>=0.24.1",
    "pydantic>=2.1.1"
]

[project.optional-dependencies]
dev = [
    "pybind11", "pybind11-stubgen",
    "pytest", "pytest-asyncio"
]

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
cmake.args = ["-DEXCLUDE_EXECUTABLES=1"]
cmake.build-type = "Release"
cmake.verbose = true
logging.level = "DEBUG"
wheel.install-dir = "am4utils"
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-verbosity = 1